[package]
name = "auth-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "auth"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.56"
azure_identity = "0.1.1"
clap = { version = "3.1.6", features = ["derive"] }
futures = "0.3.21"
oauth2 = "4.1.0"
reqwest = "0.11.10"
thiserror = "1.0.30"
tokio = { version = "1.17.0", features = ["full"] }
windows = { version = "0.34.0", features = ["alloc", "Security_Cryptography_DataProtection", "Foundation", "Storage_Streams"] }
