[package]
name = "auth-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "auth"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.56"
azure_identity = "0.1.1"
clap = { version = "3.1.6", features = ["derive"] }
console = "0.15.0"
futures = "0.3.21"
jsonwebtoken = "8.0.1"
oauth2 = "4.1.0"
reqwest = "0.11.10"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
thiserror = "1.0.30"
tokio = { version = "1.17.0", features = ["full"] }
windows = { version = "0.34.0", features = ["alloc", "Security_Cryptography_DataProtection", "Foundation", "Storage_Streams", "Win32_System_WinRT"] }

[features]
